--- a/style.css
+++ b/style.css
@@ -10,42 +10,41 @@ p{
 }
 h3{
   font-family: 'Abril Fatface', cursive !important;
+  font-size: 25px !important;
+}
+.navbar-nav{
+    margin-top:0px;
+    align-items: center;
+    font-family: 'Amiri', serif !important;
+    font-size: 20px;
+    padding: 0px !important;
+}
+.container{
+  display: flex;
+  flex-direction: column;
 }
 
-/*NAVBAR*/
-@media screen and (max-width:800px){
-  .plate, .wine{
-    display: none!important;
-  }
-}
-#logo{
-    height: 100px;
-}
-/*VRH dugme*/
-#myBtn {
-  position: fixed;
-  bottom: 20px;
-  z-index: 99;
-}
 /*Home page*/
-
 .home{
-  height:100vh;
+  height:100vh !important;
   width: 100vw;
 }
 .first{
   height: 100vh;
   width: auto;
-  margin-top: 20vh;
-  margin-left: -50px;
+  margin-top: 18vh;
+  float: left;
 }
 .plate{
+  float: right;
+  top: 200px;
   position: relative;
-  margin-top: -120px;
 }
 .wine{
   position: relative;
-  margin-top: -300px;
+  float: right;
+  top: 230px;
+
 }
 .text{
   width: 50vw;
@@ -58,8 +57,16 @@ h3{
   margin-left: 200px;
 }
 .aboutUs{
-  position: relative;
-  top: 150px;
+  top: 200px;
   height: 100vh;
-  width: 100vw;
+}
+.reservation{
+  height: 100vh;
+  background: skyblue;
+}
+.jelovnik{
+  height: 100vh;
+}
+.contact{
+  height: 100vh;
 }
