--- a/style.css
+++ b/style.css
@@ -24,6 +24,13 @@ h3{
   flex-direction: column;
 }
 
+/* Vrh button */
+#myBtn{
+  position: fixed;
+  bottom: 20px;
+  z-index: 99;
+}
+
 /*Home page*/
 .home{
   height:100vh !important;
