--- a/style.css
+++ b/style.css
@@ -12,12 +12,21 @@ h3{
   font-family: 'Abril Fatface', cursive !important;
   font-size: 25px !important;
 }
+/*NAV BAR*/
 .navbar-nav{
     margin-top:0px;
     align-items: center;
     font-family: 'Amiri', serif !important;
     font-size: 20px;
     padding: 0px !important;
+}
+nav{
+  -webkit-box-shadow: 0px 3px 10px 1px rgba(0,0,0,0.35);
+  -moz-box-shadow: 0px 3px 10px 1px rgba(0,0,0,0.35);
+  box-shadow: 0px 3px 10px 1px rgba(0,0,0,0.35);
+}
+.nav-item a{
+  font-size: 23px !important;
 }
 .container{
   display: flex;
@@ -39,7 +48,7 @@ h3{
 .first{
   height: 100vh;
   width: auto;
-  margin-top: 18vh;
+  margin-top: 15vh;
   float: left;
 }
 .plate{
@@ -61,7 +70,7 @@ h3{
   display: flex;
   flex-direction: column;
   align-items: baseline;
-  margin-left: 200px;
+  margin-left: 210px;
 }
 .aboutUs{
   top: 200px;
@@ -76,4 +85,15 @@ h3{
 }
 .contact{
   height: 100vh;
+}
+footer{
+  background-color: #282828;
+  color: white;
+}
+footer a{
+  color: #f6e6bb;
+}
+footer a:hover{
+  color: white;
+  text-decoration: line-through;
 }
