--- a/style.css
+++ b/style.css
@@ -25,6 +25,39 @@ nav{
   -moz-box-shadow: 0px 3px 10px 1px rgba(0,0,0,0.35);
   box-shadow: 0px 3px 10px 1px rgba(0,0,0,0.35);
 }
+/*skrolovanje nav bara*/
+.scrolled-nav {
+  font-size: 16px;
+}
+#global-nav {
+  position: fixed;
+  top: 0;
+  padding: 0;
+  z-index: 9999;
+  height: 100px;
+  width: 100%;
+  background: #324c5f;
+  color: #fff;
+  line-height: 150px;
+    -webkit-transition: height .5s, line-height .5s; /* Safari */
+    transition: height .5s, line-height .5s;
+}
+.scrolled-nav {
+  height: 60px !important;
+  line-height: 60px !important;
+}
+.counter {
+  width: 20px;
+  height: 20px;
+  position: fixed;
+  top: 100px;
+  right: 0;
+}
+#logo{
+  height: 50px !important;
+  line-height: 60px !important;
+}
+/*kraj skrolovanja navbara*/
 .nav-item a{
   font-size: 23px !important;
 }
