--- a/css/style.css
+++ b/css/style.css
@@ -768,7 +768,7 @@ a.rm-viewdetails:hover,
 	margin: auto;
 	margin-top: 0px;
 	width: 70%;
-	height: auto;
+	height: 380px;
 	z-index: 3;
 	visibility: hidden;
 }
