--- a/css/style.css
+++ b/css/style.css
@@ -768,7 +768,7 @@ a.rm-viewdetails:hover,
 	margin: auto;
 	margin-top: 0px;
 	width: 70%;
-	height: 380px;
+	height: 580px;
 	z-index: 3;
 	visibility: hidden;
 }
@@ -781,10 +781,11 @@ a.rm-viewdetails:hover,
 	right: 0;
 	bottom: 0;
 	left: 0;
-	margin: 120px 140px 175px 140px;
-	padding: 30px;
+	margin: 120px 140px 55px 140px;
+	padding: 10px;
 	width: 70%;
 	height: auto;
+	display: inline-block;
 	background-color: #f6e6bb;
 	visibility: hidden;
 	border: 2px solid #282828;
