--- a/css/style.css
+++ b/css/style.css
@@ -1,232 +1,3 @@
-* {
-	box-sizing: border-box;
-	margin: 0px;
-	padding: 0px;
-	list-style-type: none;
-}
-/*GLAVNE BOJE NA STRANI*/
-/*body - #f6e6bb crna- #282828*/
-/*PODESAVANJE TEXTA-NA CELOJ STRANI*/
-p {
-	font-family: 'Amiri', serif !important;
-	font-size: 20px;
-}
-h3 {
-	font-family: 'Abril Fatface', cursive !important;
-	font-size: 25px !important;
-}
-/*NAV BAR*/
-.navbar-nav {
-	margin-top: 0px;
-	align-items: center;
-	font-family: 'Amiri', serif !important;
-	padding: 0px !important;
-}
-nav {
-	-webkit-box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.35);
-	-moz-box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.35);
-	box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.35);
-}
-nav ul {
-	background-color: white !important;
-}
-.navbar-toggler:focus {
-	outline: none;
-}
-
-/*SKROLOVANJE*/
-.scrolled-nav {
-	font-size: 16px;
-	background-color: white !important;
-	margin-top: 0px;
-	height: 60px !important;
-}
-#global-nav {
-	position: fixed;
-	top: 0;
-	padding: 0;
-	z-index: 9999;
-	height: 100px;
-	width: 100%;
-	color: #fff;
-	-webkit-transition: height .5s, line-height .5s; /* Safari */
-	transition: height .5s, line-height .5s;
-}
-.counter {
-	width: 20px;
-	height: 20px;
-	position: fixed;
-	top: 100px;
-	right: 0;
-}
-#logo {
-	height: 50px !important;
-	line-height: 60px !important;
-}
-.nav-item a {
-	font-size: 23px !important;
-}
-.container {
-	display: flex;
-	flex-direction: column;
-}
-/*DUGMICI*/
-.pulse:hover,
-.pulse:focus,
-.pulse-white:hover,
-.pulse-white:focus,
-.pulse-dark:hover,
-.pulse-dark:focus {
-	animation: pulse 1s;
-	box-shadow: 0 0 0 1.5em rgba(255, 255, 255, 0);
-}
-
-@keyframes pulse {
-	0% {
-		box-shadow: 0 0 0 0 var(--hover);
-	}
-}
-.pulse-white {
-	--color: #282828;
-	--hover: tomato;
-}
-.pulse,
-.pulse-dark {
-	--color: #282828;
-	--hover: #282828;
-}
-.pulse-white {
-	color: white;
-	transition: 0.25s;
-}
-.pulse-white:hover,
-.pulse-white:focus {
-	border-color: white;
-	color: white;
-}
-
-button {
-	color: var(--color);
-	transition: 0.25s;
-}
-button:hover,
-button:focus {
-	border-color: #282828;
-	color: #282828;
-}
-
-button {
-	background: none;
-	border: 2px solid;
-	font-family: 'Amiri', serif !important;
-	letter-spacing: 5px;
-	font-size: 20px !important;
-	font-weight: bold;
-	line-height: 1;
-	margin: 0.5em;
-	padding: 1em 2em;
-}
-
-/*Home page*/
-.home {
-	height: 60vh !important;
-}
-.first {
-	position: relative;
-	margin-top: 15vh;
-	float: left;
-}
-.second {
-	position: relative;
-	margin-top: 15vh;
-	float: right;
-}
-.text {
-	position: absolute;
-	display: flex;
-	margin-top: 60vh;
-	margin-left: 35vw;
-}
-/*ABOUT US SECTION*/
-.aboutUs {
-	height: 95vh;
-	background: tomato;
-	display: flex;
-	align-items: center;
-	align-content: center;
-}
-/*DIV SA CAROUSELOM*/
-.slajdovi {
-	height: 95vh !important;
-	background: #282828;
-	padding: 5vh 0vh;
-	align-items: center;
-}
-.carouselbtn {
-	margin-top: 3vh;
-	margin-left: 45%;
-}
-/*DIV ZA REYERVACIJU*/
-.reservation {
-	height: 91vh !important;
-	background: tomato;
-}
-/*JELOVNIK*/
-.jelovnik {
-	height: 150vh !important;
-	background: #282828;
-	padding: 20px 0px;
-}
-/*KONTAKT*/
-.contact {
-	height: 50vh;
-}
-
-/*FOOTER*/
-footer {
-	background-color: white;
-	color: #282828;
-	-webkit-box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.85);
-	-moz-box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.85);
-	box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.85);
-}
-footer a {
-	color: #282828;
-}
-footer a:hover {
-	color: tomato;
-	font-weight: bold;
-	text-decoration: none;
-}
-.social {
-	margin: auto !important;
-}
-.social a {
-	font-size: 30px;
-	padding: 10px;
-}
-@media screen and (max-width: 800px) {
-	.jelovnik {
-		height: 500vh !important;
-	}
-	button {
-		font-size: 15px !important;
-	}
-}
-
-@media screen and (max-width: 960px) {
-	.jelovnik {
-		height: 500vh !important;
-	}
-	button {
-		font-size: 15px !important;
-	}
-	.text{
-		font-size: 5rem !important;
-	}
-	}
-
-/*CSS JELOVNIKA*/
 @import url('normalize.css');
 @import url('demo.css');
 @font-face {
@@ -781,7 +552,7 @@ a.rm-viewdetails:hover,
 	margin: auto;
 	margin-top: 0px;
 	width: 70%;
-	height: 580px;
+	height: auto;
 	z-index: 3;
 	visibility: hidden;
 }
@@ -794,14 +565,13 @@ a.rm-viewdetails:hover,
 	right: 0;
 	bottom: 0;
 	left: 0;
-	margin: 120px 140px 55px 140px;
-	padding: 10px;
+	margin: 120px 140px 175px 140px;
+	padding: 30px;
 	width: 70%;
 	height: auto;
-	display: inline-block;
-	background-color: #f6e6bb;
+	background-color: orange;
 	visibility: hidden;
-	border: 2px solid #282828;
+	border: 1px solid black;
 	z-index: 4;
 }
 
@@ -813,9 +583,9 @@ a.rm-viewdetails:hover,
 	bottom: 20px;
 	outline: none;
 	overflow: hidden;
-	color: white;
+	color: #fff;
 	text-align: center;
-	background-color: rgba(64, 64, 64, 0.64);
+	background-color: rgba(49, 79, 96, 0.64);
 	height: 40px;
 	width: 40px;
 	line-height: 40px;
@@ -824,12 +594,232 @@ a.rm-viewdetails:hover,
 	cursor: pointer;
 	transition: all 0.4s linear;
 	z-index: 999999;
+
 	opacity: 1;
 	display: none;
 }
 #backtop:hover {
-	background-color: #ff7d66;
+	background-color: red;
 }
 #backtop.mcOut {
 	opacity: 0;
+}
+
+/*Bilo u style.css*/
+
+* {
+	box-sizing: border-box;
+	margin: 0px;
+	padding: 0px;
+	list-style-type: none;
+}
+/*GLAVNE BOJE NA STRANI*/
+/*body - #f6e6bb crna- #282828*/
+/*PODESAVANJE TEXTA-NA CELOJ STRANI*/
+p {
+	font-family: 'Amiri', serif !important;
+	font-size: 20px;
+}
+h3 {
+	font-family: 'Abril Fatface', cursive !important;
+	font-size: 25px !important;
+}
+/*NAV BAR*/
+.navbar-nav {
+	margin-top: 0px;
+	align-items: center;
+	font-family: 'Amiri', serif !important;
+	padding: 0px !important;
+}
+nav {
+	-webkit-box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.35);
+	-moz-box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.35);
+	box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.35);
+}
+nav ul {
+	background-color: white !important;
+}
+.navbar-toggler:focus {
+	outline: none;
+}
+
+/*SKROLOVANJE*/
+.scrolled-nav {
+	font-size: 16px;
+	background-color: white !important;
+	margin-top: 0px;
+	height: 60px !important;
+}
+#global-nav {
+	position: fixed;
+	top: 0;
+	padding: 0;
+	z-index: 9999;
+	height: 100px;
+	width: 100%;
+	color: #fff;
+	-webkit-transition: height .5s, line-height .5s; /* Safari */
+	transition: height .5s, line-height .5s;
+}
+
+.counter {
+	width: 20px;
+	height: 20px;
+	position: fixed;
+	top: 100px;
+	right: 0;
+}
+#logo {
+	height: 50px !important;
+	line-height: 60px !important;
+}
+.nav-item a {
+	font-size: 23px !important;
+}
+.container {
+	display: flex;
+	flex-direction: column;
+}
+/*DUGMICI*/
+.pulse:hover,
+.pulse:focus,
+.pulse-white:hover,
+.pulse-white:focus,
+.pulse-dark:hover,
+.pulse-dark:focus {
+	animation: pulse 1s;
+	box-shadow: 0 0 0 2em rgba(255, 255, 255, 0);
+}
+
+@keyframes pulse {
+	0% {
+		box-shadow: 0 0 0 0 var(--hover);
+	}
+}
+.pulse-white {
+	--color: #282828;
+	--hover: tomato;
+}
+.pulse,
+.pulse-dark {
+	--color: #282828;
+	--hover: #282828;
+}
+.pulse-white {
+	color: white;
+	transition: 0.25s;
+}
+.pulse-white:hover,
+.pulse-white:focus {
+	border-color: white;
+	color: white;
+}
+
+button {
+	color: var(--color);
+	transition: 0.25s;
+}
+button:hover,
+button:focus {
+	border-color: #282828;
+	color: #282828;
+}
+
+button {
+	background: none;
+	border: 2px solid;
+	font-family: 'Amiri', serif !important;
+	letter-spacing: 5px;
+	font-size: 20px !important;
+	font-weight: bold;
+	line-height: 1;
+	margin: 0.5em;
+	padding: 1em 2em;
+}
+
+/*Home page*/
+.home {
+	height: 60vh !important;
+	position: ;
+}
+.first {
+	position: relative;
+	margin-top: 15vh;
+	float: left;
+}
+.second {
+	position: relative;
+	margin-top: 15vh;
+	float: right;
+}
+.text {
+	position: absolute;
+	display: flex;
+	margin-top: 60vh;
+	margin-left: 35vw;
+}
+/*ABOUT US SECTION*/
+.aboutUs {
+	height: 95vh;
+	background: tomato;
+	display: flex;
+	align-items: center;
+	align-content: center;
+}
+/*DIV SA CAROUSELOM*/
+.slajdovi {
+	height: 95vh !important;
+	background: #282828;
+	padding: 5vh 0vh;
+	align-items: center;
+}
+.carouselbtn {
+	margin-top: 3vh;
+	margin-left: 45%;
+}
+/*DIV ZA REYERVACIJU*/
+.reservation {
+	height: 91vh !important;
+	background: tomato;
+}
+/*JELOVNIK*/
+.jelovnik {
+	height: 115vh !important;
+	background: #282828;
+}
+/*KONTAKT*/
+.contact {
+	height: 50vh;
+}
+
+/*FOOTER*/
+footer {
+	background-color: white;
+	color: #282828;
+	-webkit-box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.85);
+	-moz-box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.85);
+	box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.85);
+}
+footer a {
+	color: #282828;
+}
+footer a:hover {
+	color: tomato;
+	font-weight: bold;
+	text-decoration: none;
+}
+.social {
+	margin: auto !important;
+}
+.social a {
+	font-size: 30px;
+	padding: 10px;
+}
+@media screen and (max-width: 800px) {
+	.jelovnik {
+		height: 450vh !important;
+	}
+	button {
+		font-size: 15px !important;
+	}
 }
