--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,6 @@ footer a:hover {
 	}
 }
 
-
 /*CSS JELOVNIKA*/
 @import url('normalize.css');
 @import url('demo.css');
@@ -230,6 +229,8 @@ footer a:hover {
 
 body {
 	background: #f6e6bb !important;
+	max-width: 100%;
+	overflow-x: hidden;
 }
 .rm-info p {
 	padding-top: 250px;
