--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,20 @@ nav ul {
 .navbar-toggler:focus {
 	outline: none;
 }
-a.active{
+a.active {
 	font-weight: bold;
+}
+.progress-container {
+	width: 100%;
+	height: 8px;
+	background: white;
+	position: static;
+}
+
+.progress-bar {
+	height: 8px;
+	background: #f8b044;
+	width: 0%;
 }
 
 /*SKROLOVANJE*/
@@ -158,7 +170,7 @@ button {
 	align-items: center;
 	align-content: center;
 }
-.aboutUs a{
+.aboutUs a {
 	color: #f6e6bb;
 }
 /*DIV SA CAROUSELOM*/
@@ -188,11 +200,10 @@ button {
 	height: 50vh;
 }
 /*BANNERS*/
-.baner{
+.baner {
 	-webkit-box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.85);
 	-moz-box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.85);
 	box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.85);
-
 }
 /*FOOTER*/
 footer {
@@ -218,19 +229,13 @@ footer a:hover {
 @media (max-width: 575.98px) {
 }
 
-
 @media (max-width: 767.98px) {
-
 }
-
 
 @media (max-width: 991.98px) {
-
 }
 
-
 @media (max-width: 1199.98px) {
-
 }
 
 @media screen and (max-width: 800px) {
